在 ELPA 包列表中增加 cmake-font-lock、function-args。

--- a/.emacs.d/initialize.org
+++ b/.emacs.d/initialize.org
@@ -1011,9 +1011,11 @@
   (defvar wb-elpa-packages
     '(avy
       bm
+      cmake-font-lock
       company
       company-irony
       evil
+      function-args
       ggtags
       helm
       helm-gtags
