使用 ido-ubiquitous 和 ido-vertical-mode。

--- a/.emacs.d/initialize.org
+++ b/.emacs.d/initialize.org
@@ -1020,6 +1020,8 @@
       helm
       helm-gtags
       helm-projectile
+      ido-ubiquitous
+      ido-vertical-mode
       magit
       markdown-mode
       monokai-theme
